Create server file and Update README.md

--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
-    "start": "webpack-dev-server --watch"
+    "build": "webpack --env.NODE_ENV=production",
+    "start": "node ./server/index.js --env.NODE_ENV=production",
+    "dev": "webpack-dev-server --watch --env.NODE_ENV=development"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
+    "path": "^0.12.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
